# sockets

./: CMakeLists.txt
.github/workflows/: linux.yml  windows.yml
src/: CMakeLists.txt  ancillarytcpsocket.cpp  ancillarytcpsocket.h  select.h  socketaddress.cpp  socketaddress.h  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h  tcpsocket_p.h  tcpsocket_unix.cpp  tcpsocket_win.cpp
tests/: CMakeLists.txt  ancillarysocketserver_test.cpp  tcpsocket_test.cpp  tcpsocketserver_test.cpp
